--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -208,13 +208,13 @@
           <!-- 写真表示機能削除ver -->
           <!-- Bootstrapの機能一部削除ver -->
           <td class="text-center align-middle">
-            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "pre"), :class=>"shooting" %>              
+            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "pre") %>              
           </td>
           <td class="text-center align-middle">
-            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "ongoing"), :class=>"shooting" %>
+            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "ongoing") %>
           </td>
           <td class="text-center align-middle">
-            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "after"), :class=>"shooting" %>
+            <%= link_to '撮影', edit_damage_path(sonsyo_id: sonsyo.id, survey_type: "after") %>
           </td>
 
 <% if false %><!-- コメントアウト -->
@@ -609,14 +609,17 @@ $(document).ready(function() {
   // ユーザーエージェントにより、処理を切り分け
   if(userAgentResult.match(/iPhone/))
   {
+    alert(userAgentResult + "\niPhoneです");
     console.log("iPhoneです");
   }
   else if(userAgentResult.match(/iPad/))
   {
+    alert(userAgentResult + "\niPadです");
     console.log("iPadです");    
   }
   else
   {
+    alert(userAgentResult + "\nその他の端末です");
     console.log("その他の端末です");
     $(".shooting").addClass("nullify");
   }
