--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -447,7 +447,7 @@
   pointer-events: none;
 }
 
-/* テーブル内スクロール *
+/* テーブル内スクロール */
 .table_inner_scroll_box {
   overflow-y: auto;
   max-height: 400px;
@@ -470,7 +470,6 @@
   background: #eee;
   z-index: -1;
 }
-*/
 
 .table_inner_scroll_box th {
   min-width: 76px;
